Fix font rendering: enable antialiasing for better text readability

--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,9 @@ body {
     font-size: 14px;
     line-height: 1.7;
     padding: 20px;
-    -webkit-font-smoothing: none;
-    -moz-osx-font-smoothing: unset;
-    font-smooth: never;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
 }
 
 /* Container */
